--- a/app/src/main/res/layout/activity_main_pm.xml
+++ b/app/src/main/res/layout/activity_main_pm.xml
@@ -29,7 +29,8 @@
             android:layout_height="52dp"
             android:layout_marginTop="20dp"
             android:layout_marginLeft="308dp"
-            android:background="@drawable/m_setting"/>
+            android:background="@drawable/m_setting"
+            android:onClick="setting"/>
     </FrameLayout>
 
     <FrameLayout
